Revise index.html for Firebase integration
Updated HTML structure and added Firebase analytics.

--- a/index.html
+++ b/index.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hant">
 <head>
-    <meta charset="utf-8">
-    <title>我的網頁</title>
+    <meta charset="UTF-8">
+    <title>Ziv 的 Firebase 測試</title>
 </head>
 <body>
-    <h1>Firebase 測試中</h1>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
+    <h1>Firebase 載入狀態：<span id="status">檢查中...</span></h1>
+
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics-compat.js"></script>
+
     <script>
-      // 這裡就是你要更換的地方！請把 Firebase 給你的金鑰貼在下面
-      const firebaseConfig = {
-          apiKey: "AIzaSyAVGnTH6nyrsr3kczg9pqRjX7voVdkYHno",
-          authDomain: "zivqq-65b58.firebaseapp.com",
-          projectId: "zivqq-65b58",
-          storageBucket: "zivqq-65b58.firebasestorage.app",
-          messagingSenderId: "432256503660",
-          appId: "1:432256503660:web:a40bb0f21367ffe522ad49",
-      };
-      // 初始化
-      const app = firebase.initializeApp(firebaseConfig);
-      console.log("Firebase 已啟動");
+        // 2. 你的金鑰資料 (已經根據你提供的資料填好)
+        const firebaseConfig = {
+            apiKey: "AIzaSyAVGnTH6nyrsr3kczg9pqRjX7voVdkYHno",
+            authDomain: "zivqq-65b58.firebaseapp.com",
+            projectId: "zivqq-65b58",
+            storageBucket: "zivqq-65b58.firebasestorage.app",
+            messagingSenderId: "432256503660",
+            appId: "1:432256503660:web:a40bb0f21367ffe522ad49",
+            measurementId: "G-CXND1387NN"
+        };
+
+        // 3. 初始化 Firebase (注意這裡的寫法與 import 不同)
+        try {
+            firebase.initializeApp(firebaseConfig);
+            firebase.analytics();
+            
+            document.getElementById('status').innerText = "✅ 成功連線！";
+            console.log("Firebase 載入成功！");
+        } catch (error) {
+            document.getElementById('status').innerText = "❌ 發生錯誤";
+            console.error("初始化失敗：", error);
+        }
     </script>
 </body>
 </html>
